@@ -97,7 +97,6 @@
 670,0xc7,    ,  1, 4:7:10:13:16:19:22:25:28:31,1000,all,0x008	//NPC_EVILLAND
 2032,0xe1,   ,  2, 0,1000,enemy, 0x000	//GC_POISONSMOKE
 2044,0xca,   ,  0, 3,1000,all,   0x000	//AB_EPICLESIS
-2213,0x86,   ,  0,15,1000,enemy, 0x000	//WL_COMET
 2214,0x86,   ,  0, 5, 100,enemy, 0x080	//WL_CHAINLIGHTNING
 2216,0xcb,   , -1, 2:2:3:3:4,1000,enemy, 0x018	//WL_EARTHSTRAIN
 2238,0xd8,   ,  0, 2,1000,enemy, 0x002	//RA_ELECTRICSHOCKER
